--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "dflydev/apache-mime-types": "^1.0",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "michelf/php-markdown": "^1.8",
