--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "mews/captcha": "^2.2",
         "michelf/php-markdown": "^1.8",
         "michelf/php-smartypants": "^1.8"
     },
