--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/tinker": "^1.0",
         "mews/captcha": "^2.2",
         "michelf/php-markdown": "^1.8",
-        "michelf/php-smartypants": "^1.8"
+        "michelf/php-smartypants": "^1.8",
+        "overtrue/laravel-lang": "~3.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
