--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "alibabacloud/sdk": "^1.7",
         "dflydev/apache-mime-types": "^1.0",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
