--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,7 @@
     "/css/selectize.default.css": "/css/selectize.default.css",
     "/css/pickadate.min.css": "/css/pickadate.min.css",
     "/js/selectize.min.js": "/js/selectize.min.js",
-    "/js/pickadate.min.js": "/js/pickadate.min.js"
+    "/js/pickadate.min.js": "/js/pickadate.min.js",
+    "/css/simplede.min.css": "/css/simplede.min.css",
+    "/js/simplemde.js": "/js/simplemde.js"
 }
