--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "michelf/php-markdown": "^1.8",
         "michelf/php-smartypants": "^1.8",
         "overtrue/laravel-lang": "~3.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "swooletw/laravel-swoole": "^2.6"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
