--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "alibabacloud/sdk": "^1.7",
         "dflydev/apache-mime-types": "^1.0",
         "doctrine/dbal": "^2.9",
+        "erusev/parsedown": "^1.7",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "jacobcyl/ali-oss-storage": "2.1",
