--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "michelf/php-smartypants": "^1.8",
         "overtrue/laravel-lang": "~3.0",
         "predis/predis": "^1.1",
-        "swooletw/laravel-swoole": "^2.6"
+        "swooletw/laravel-swoole": "^2.6",
+        "elasticsearch/elasticsearch": "~6.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
